--- a/style.css
+++ b/style.css
@@ -1,1 +1,110 @@
-mis ccs
+#body {
+    Font-size: 15px;
+}
+img {
+    max-width: 100%;
+}
+h2 {
+    color:  hsl(234, 12%, 34%);
+}
+p  {
+    color: hsl(212, 6%, 44%);
+}
+.container {
+  font-size: 15px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.poppins-thin {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200, 400, 600 
+  }
+.texto1 {
+    font-family: "Poppins";
+    font-weight: 200;
+    font-size: 30px;
+    color: hsl(234, 12%, 34%);
+    margin: 0%;
+}
+.texto2 {
+    font-family: "Poppins";
+    font-size: 30px;
+    color: hsl(234, 12%, 34%);
+    margin: 0%;
+}
+.inf {
+    text-align: center;
+   margin-bottom: 110px;
+    
+}
+
+.infoP {
+    display: grid;
+    grid-template-columns: repeat(
+        auto-fit,
+        minmax (
+        375px,
+        1400px
+        )
+    );
+    gap: 36px;
+}
+@media
+ (min-width: 1440px) {
+    .infoP {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+    .info1 {
+        grid-row: 2/4;
+    }
+    .info2 {
+        grid-column: 2/3;
+        grid-row: 1/3;
+    }
+    .info3 {
+        grid-column: 2/3;
+        grid-row: 3/5;
+    }
+    .info4 {
+        grid-column: 3/3;
+        grid-row: 2/4;
+    }
+ }
+
+.info {
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 0px 15px 40px hsl(220, 30%, 86%);  
+    border-radius: 10px;
+    padding-top: 0%;
+}
+.line {
+    background-color: blue;
+    height: 5px; /* Grosor de la línea */
+    margin-top: 0%;
+    margin-bottom: 2rem;
+}
+.line1 {
+    background-color: hsl(180, 62%, 55%);
+}
+.line2 {
+    background-color: hsl(0, 78%, 62%);
+}
+.line3 {
+    background-color: hsl(34, 97%, 64%);
+}
+.line4 {
+    background-color:  hsl(212, 86%, 64%);
+}
+.margen {
+    margin: 2rem;
+}
+.img {
+ margin-left: 320px;
+ padding-top: 2rem;
+ padding-bottom: 1rem;
+}
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
