--- a/style.css
+++ b/style.css
@@ -53,26 +53,30 @@ p  {
  (min-width: 1440px) {
     .infoP {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-    }
-    .info1 {
-        grid-row: 2/4;
-    }
-    .info2 {
-        grid-column: 2/3;
-        grid-row: 1/3;
-    }
-    .info3 {
-        grid-column: 2/3;
-        grid-row: 3/5;
-    }
-    .info4 {
-        grid-column: 3/3;
-        grid-row: 2/4;
+        grid-template-areas: 
+        "  .   info2    .  "
+        "info1 info2  info4"
+        "info1 info3  info4"
+        "  .   info3    .  ";
+       
+          .info1 {
+            grid-area: info1;
+            
+          }
+          .info2 {
+            grid-area: info2;
+            
+          }
+          .info3 {
+            grid-area: info3;
+            
+          }
+          .info4 {
+            grid-area: info4;
+            
+          }
     }
  }
-
 .info {
     background-color: hsl(0, 0%, 100%);
     box-shadow: 0px 15px 40px hsl(220, 30%, 86%);  
@@ -81,9 +85,10 @@ p  {
 }
 .line {
     background-color: blue;
-    height: 5px; /* Grosor de la línea */
+    height: 5px;
     margin-top: 0%;
     margin-bottom: 2rem;
+    border-radius: 16px;
 }
 .line1 {
     background-color: hsl(180, 62%, 55%);
@@ -102,6 +107,7 @@ p  {
 }
 .img {
  margin-left: 320px;
+ max-width: 320px;
  padding-top: 2rem;
  padding-bottom: 1rem;
 }
